# WoxMoke

./: .gitignore  LICENSE  README.md
Smoke Sim/: CMakeLists.txt  CMakeSettings.json  README.md
Smoke Sim/res/: Scene.txt  Voxels Full Scene backup.vxl  Voxels.vxl
Smoke Sim/res/Meshes/: Single_Voxel.mtl
Smoke Sim/res/Motel/: uploads_files_2767105_Motel.blend  uploads_files_2767105_Motel.blend1
Smoke Sim/shaders/glsl/: deferredpass1.frag  deferredpass1.vert  deferredpass2BS.frag  deferredpass2BS.vert  deferredpass4.frag  gaussian_blur.frag  giant_triangle.vert  output_combination.frag  output_combination.vert  pathtracing.comp  voxel_pass.frag  voxel_pass.vert  worley_storage.comp
Smoke Sim/src/: CMakeLists.txt  flood_fill.cpp  flood_fill.hpp  helpers.cpp  helpers.hpp  main.cpp  paths.hpp  scene.cpp  scene.hpp  transform.h  voxel.cpp  voxel.hpp  worley.cpp  worley.hpp
